@@ -1,3 +1,15 @@
+2021-08-20  Alan Bujtas  <zalan@apple.com>
+
+        [IFC][Integration] Enable custom hyphen strings
+        https://bugs.webkit.org/show_bug.cgi?id=229049
+
+        Reviewed by Antti Koivisto.
+
+        This was most likely the case of non-primary font handling in SLL. It just works in IFC.
+
+        * layout/integration/LayoutIntegrationCoverage.cpp:
+        (WebCore::LayoutIntegration::canUseForStyle):
+
 2021-08-20  Tim Nguyen  <ntim@apple.com>
 
         Initial implementation of inert subtrees
